[Rikkashini/Twinkle]Updated styles in 2022 edition page

--- a/mar2022.html
+++ b/mar2022.html
@@ -410,7 +410,7 @@
 </section>
 
 <section id="speaker_list" class="speakerList" style="min-height: 50%; text-align: center">
-    <h5 style="padding: 10%; color: #00AEEF">Speaker details will be added soon!</h5>
+    <h5 style="padding: 10%; color: #47A1AD">Speaker details will be added soon!</h5>
 </section>
 
 <!--<section id="speaker_list" class="speakerList" >
