--- a/mar2022.html
+++ b/mar2022.html
@@ -53,7 +53,7 @@
             <h6>25<sup>th</sup> - 26<sup>th</sup> March</h6>
         </div>
         <div class="small-4 large-4 columns counter">
-            <p>Days</p>
+            <p>Days Left</p>
             <h6 class="couter-border-top"><span id="days">&nbsp;</span></h6>
         </div>
     </div>
@@ -100,8 +100,7 @@
             it has been adopted by organizations and technologists.
         </p>
         <br>
-        <a href="#registration" class="link"><i>Don't forget to register for virtual Converge happening on Friday, 25th
-            March 2022!</i></a>
+        <a href="#registration" class="link"><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></a>
         <br><br>
         <div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link"
@@ -129,7 +128,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-0"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Day 1 - 25th March,2022</p>
+                <h6 style="font-weight: bolder; font-size: x-large">Day 1 - 25th March, 2022</h6>
             </div>
         </div>
 
@@ -247,7 +246,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-10"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Day 2 - 26th March, 2022</p>
+                <h6 style="font-weight: bolder; font-size: x-large">Day 2 - 26th March, 2022</h6>
             </div>
         </div>
 
