--- a/mar2022.html
+++ b/mar2022.html
@@ -154,19 +154,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Panel Discussion<br></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-3"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>3:30PM - 3:35PM</p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-3"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Break</p>
+                <p>XaaS : Looking back to look forward<br></p>
             </div>
         </div>
         <div class="row">
@@ -178,7 +166,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Symposium</p>
+                <p>Metaverse as a service</p>
             </div>
         </div>
         <div class="row">
@@ -190,19 +178,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Lightning Talk</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-6"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>4:35PM - 4:40PM</p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-6"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Feedback</p>
+                <p>Insurance as a service</p>
             </div>
         </div>
         <div class="row">
@@ -216,8 +192,7 @@
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>Symposium</p>
             </div>
-        </div>
-        <div class="row">
+        </div><div class="row">
             <div class="large-4 columns time" id="agenda-8"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
@@ -226,22 +201,9 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-8"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Lightning Talk</p>
+                <p>XaaS as an X</p>
             </div>
         </div>
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-9"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>6:00PM</p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-9"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Wrap-Up</p>
-            </div>
-        </div>
-
         <div class="row">
             <div class="large-8 columns summary" data-anchor-target="#agenda-10"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
@@ -272,20 +234,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-12"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Lightning Talk</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-13"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>11:15AM - 11:30AM</p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-13"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Break</p>
+                <p>Logistics as a Service: Trends and opportunities</p>
             </div>
         </div>
 
@@ -298,7 +247,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-14"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Symposium</p>
+                <p>Banking backend as a Service</p>
             </div>
         </div>
 
@@ -311,20 +260,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-15"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Lightning Talk</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-16"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>12:30PM - 12:40PM</p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-16"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Break</p>
+                <p>Retail Stores as a Service (RSaaS)</p>
             </div>
         </div>
 
@@ -350,23 +286,9 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-18"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Lightning Talk</p>
+                <p>Learning as a Service (LaaS)</p>
             </div>
         </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-19"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>1:40PM - 2:15PM</p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-19"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Lunch Break</p>
-            </div>
-        </div>
-
         <div class="row">
             <div class="large-4 columns time" id="agenda-20"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
@@ -376,7 +298,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-20"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Lightning Talk</p>
+                <p>AI as a Service: The Next thing for Big Tech</p>
             </div>
         </div>
 
@@ -389,20 +311,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-21"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Symposium</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-22"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>3:15PM - 3:30PM</p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-22"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Event Wrap-up</p>
+                <p>Neural Network as a service</p>
             </div>
         </div>
     </div>
