[Rikkashini]Updated about content i 2022 edition page

--- a/mar2022.html
+++ b/mar2022.html
@@ -100,7 +100,7 @@
             it has been adopted by organizations and technologists.
         </p>
         <br>
-        <a href="#registration" class="link"><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></a>
+        <p style="color: #47A1AD"><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></p>
         <br><br>
         <div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link"
