--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             it has been adopted by organizations and technologists.
         </p>
         <br>
-        <p style="color: #47A1AD"><i>Don't forget to register for the first virtual Converge happening on Saturday, 5th Dec'20!</p>
+        <p style="color: #47A1AD"><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></a></p>
         <br><br>
         <div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link"
