--- a/mar2022.html
+++ b/mar2022.html
@@ -100,6 +100,7 @@
             it has been adopted by organizations and technologists.
         </p>
         <br>
+<!--        todo remove inline styling, font-dolor consistency black-->
         <p class="register" style="color: #F2617A;"><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></p>
         <br><br>
         <div>
